--- a/llt.bib
+++ b/llt.bib
@@ -454,7 +454,7 @@
 }
 
 
-@misc{eyespectrum, 
+@misc{eyespectrum,
 title={Normalized human photoreceptor absorbances for different wavelengths of light},
 author={OpenStax College},
 year={2013},
@@ -810,11 +810,11 @@ journal={Colour metric: https://www.compuphase.com/cmetric.htm},   year={2018}}
   publisher={Academic press London}
 }
 
-@misc{jaffer_2017, title={Color-Name Dictionaries}, url={https://people.csail.mit.edu/jaffer/Color/Dictionaries}, journal={Color-Name Dictionaries}, author={Jaffer, Aubrey}, year={2017}} 
+@misc{jaffer_2017, title={Color-Name Dictionaries}, url={https://people.csail.mit.edu/jaffer/Color/Dictionaries}, journal={Color-Name Dictionaries}, author={Jaffer, Aubrey}, year={2017}}
 
-@misc{raveling, title={X11 color database}, url={https://groups.google.com/forum/?fromgroups=#!topic/comp.windows.x/AYPozZhQxok}, journal={X11 color database}, author={Raveling, Paul}, year={1989}} 
+@misc{raveling, title={X11 color database}, url={https://groups.google.com/forum/?fromgroups=#!topic/comp.windows.x/AYPozZhQxok}, journal={X11 color database}, author={Raveling, Paul}, year={1989}}
 
-@misc{crayolacolor, title={Explore Color}, url={https://www.crayola.com/explore-colors.aspx}, journal={Explore Color}, author={Crayola}, note = {Accessed: 2020-03-13}, year={2020}} 
+@misc{crayolacolor, title={Explore Color}, url={https://www.crayola.com/explore-colors.aspx}, journal={Explore Color}, author={Crayola}, note = {Accessed: 2020-03-13}, year={2020}}
 
 
 @inproceedings{kulis2009kernelized,
@@ -871,4 +871,12 @@ journal={Colour metric: https://www.compuphase.com/cmetric.htm},   year={2018}}
   pages={422--446},
   year={2002},
   publisher={ACM New York, NY, USA}
+}
+
+@misc{observerimage,
+    author = {{New Jersey Local News Service}},
+    title = {East Orange police arrest 30 as part of investigation combating gang violence},
+    year = {2010},
+    note = {[Online; accessed February 06, 2021]},
+    url = {https://www.nj.com/news/local/2010/06/police_make_arrests_in_east_or.html}
 }
