--- a/thesis.tex
+++ b/thesis.tex
@@ -58,11 +58,11 @@ breaklines=true,breakatwhitespace=true}
 
 
 \newcommand*\mean[1]{\bar{#1}}
-\newcommand{\versionOneExt}{{Phase 1: LSH-Inspired Semantic Extraction}\xspace}
-\newcommand{\versionTwoExt}{{Phase 2: Chamfer Distance-Inspired Semantic Extraction}\xspace}
+% \newcommand{\versionOneExt}{{Phase 1: LSH-Inspired Semantic Extraction}\xspace}
+\newcommand{\versionTwoExt}{{Semantic Extraction}\xspace}
 
-\newcommand{\versionOneRet}{{Phase 1: LSH-Inspired Retrieval Technique}\xspace}
-\newcommand{\versionTwoRet}{{Phase 2: Chamfer Distance based Retrieval Technique}\xspace}
+% \newcommand{\versionOneRet}{{Phase 1: LSH-Inspired Retrieval Technique}\xspace}
+\newcommand{\versionTwoRet}{{Chamfer Distance based Retrieval Technique}\xspace}
 
 
 
