Updates from Overleaf

--- a/2literature-review.tex
+++ b/2literature-review.tex
@@ -3,7 +3,8 @@
 %!TEX ROOT = thesis.tex
 
 
-\chapter{Background Study} \label{section:litreview}
+\chapter{Background Study} 
+\label{section:litreview}
 
 In this chapter, related theoretical background concepts are first introduced.
 Then, the related works in literature are discussed at length in two main sub-sections:
